--- a/.env-templates
+++ b/.env-templates
@@ -1,2 +1,5 @@
 JWT_SECRET={INSERT YOUR SECRET HERE}
 DATABASE_NAME={INSERT YOU DATABASE NAME HERE}
+CLIENT_ID={INSERT YOUR GOOGLE CLIENT ID HERE}
+password={INSERT YOUR PASSWORD FOR GLOGIN HERE}
+GOOGLE_APPLICATION_CREDENTIALS={INSERT YOUR PROJECT KEYFILE PATH HERE}
